# face-api

./: .gitignore  pyproject.toml  requirements.txt
app/: face_utils.py  main.py
face-analysis-api/: .gitignore  requirements.txt
face-analysis-api/app/: main.py
